--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,27 @@
 <resources>
-    <string name="app_name">CoffeeWall</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+    <string name="app_name" translatable="false">Coffee Wall</string>
+    <string name="register">Register</string>
+    <string name="dont_have_an_account">Don\'t Have an Account?</string>
+    <string name="log_in">Log In</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="fill_your_coffee_cup">Fill Your Coffee Cup</string>
+    <string name="track_it">Track it</string>
+    <string name="refill_the_cup">Refill the cup</string>
+    <string name="get_drink_of_your_mood">Get drink of your mood</string>
+    <string name="back_to_home">Back</string>
+    <string name="coffee_book">Coffee Book</string>
+    <string name="diary">Diary</string>
+    <string name="track_your_drink">Track Your Drink</string>
+    <string name="already_got_account">Already Got an Account?</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="track_select_drink">Select the drink first</string>
+    <string name="track_select_size">Select the size first</string>
+    <string name="track_select_mark">Mark your choice first</string>
+    <string name="track_label_drink">What have you just drunk?</string>
+    <string name="track_label_size">What size was it?</string>
+    <string name="track_label_location">Where did you drink it?</string>
+    <string name="track_label_mark">How did you enjoy it?</string>
+    <string name="track_success">Successfully tracked</string>
 </resources>
