feat: calories translated

--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -29,4 +29,5 @@
     <string name="wrong_credentials">Няправільныя даныя</string>
     <string name="blank_login_password">Вы павінны ўвесці лагін і пароль</string>
     <string name="passwords_not_match">Паролі не супадаюць</string>
+    <string name="сalories">Калорый: %d</string>
 </resources>
