--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -29,4 +29,5 @@
     <string name="wrong_credentials">Неправильні дані</string>
     <string name="blank_login_password">Ви повинні ввести логін та пароль</string>
     <string name="passwords_not_match">Паролі не збігаються</string>
+    <string name="сalories">Калорій: %d</string>
 </resources>
