--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="wrong_credentials">Wrong credentials</string>
     <string name="blank_login_password">You should enter your login and password</string>
     <string name="passwords_not_match">Passwords do not match</string>
+    <string name="сalories">%d calories</string>
 </resources>
